--- a/style.css
+++ b/style.css
@@ -30,7 +30,7 @@ header {
     background-color: var(--white);
 }
 #hero {
-    background-image: url('Background.jpg');
+    background-image: url('green code.webp');
     background-size: cover;
     background-position: center;
     color: var(--white);
