--- a/style.css
+++ b/style.css
@@ -52,7 +52,7 @@ body {
     width: 100%;
     height: 100%;
     object-fit: cover;
-    filter: brightness(0.6); /* Updated filter for background image */
+    filter: brightness(0.7);
 }
 
 .layer.content {
@@ -60,11 +60,6 @@ body {
     align-items: center;
     justify-content: center;
     background-color: rgba(0, 97, 79, 0.4);
-}
-
-.layer.overlay img {
-    filter: brightness(0.8);
-    opacity: 0.7;
 }
 
 nav {
@@ -261,7 +256,7 @@ footer {
 }
 
 .modal-content {
-    max-width: 90%;
+    max-width: 90%
     max-height: 80%;
     margin: auto;
     display: block;
